syntax = "proto3";
package song;

service SongService {
  rpc RecognizeSong(RecognizeSongRequest) returns (RecognizeSongResponse);
}

message Fingerprints {
  string hash = 1;
  int32 time = 2;
}

message RecognizeSongRequest {
  repeated Fingerprints fingerprints = 1;
}

message RecognizeSongResponse {
  string song_name = 1;
}